[package]
name = "rust_otel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features=["env-filter"]}
tracing-honeycomb = "0.4.3"
tracing-opentelemetry = "0.22.0"
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "metrics", "logs", "tls-roots"]}
opentelemetry_sdk = {version = "0.21.1", features = ["rt-tokio"] }
opentelemetry-http = "0.10.0"
opentelemetry-jaeger = "0.20.0"
tonic = "0.9.2"
